--- a/src/css/index.css
+++ b/src/css/index.css
@@ -5,14 +5,6 @@
   --compose-btn-bg-light-hover: color(var(--compose-btn-bg-light) shade(20%));
 }
 
-.med-tweet {
-  display: none;
-}
-
-.media-caret {
-  z-index: 0;
-}
-
 .btd__round_pic :matches(.tweet-avatar, .prf-img, .avatar, .compose-account) {
   border-radius: 50%;
 }
@@ -210,5 +202,15 @@
 
   .reply-triangle {
     border-color: transparent transparent var(--compose-btn-bg-light-hover) transparent;
+  }
+}
+
+[data-btdtheme] {
+  .med-tweet {
+    display: none;
+  }
+
+  .dropdown-menu {
+    z-index: 10;
   }
 }
