--- a/source/styles/_minimalMode.scss
+++ b/source/styles/_minimalMode.scss
@@ -1,3 +1,18 @@
+// hide "view conversation"
+.btd-minimal_mode .js-stream-item-content .link-complex[rel="viewDetails"] {
+	display: none;
+}
+
+.btd-minimal_mode .js-stream-item .js-tweet-actions {
+	float: right !important;
+	width: auto !important;
+	opacity: 0 !important;
+}
+
+.btd-minimal_mode .js-stream-item:hover .js-tweet-actions {
+	opacity: 1 !important;
+}
+
 
 /* Minimal mode (Dark)  */
 
