--- a/src/css/index.css
+++ b/src/css/index.css
@@ -46,6 +46,24 @@
   }
 }
 
+/*.btd-hide_view_conversation .js-stream-item-content .link-complex[rel="viewDetails"] {
+	display: none;
+}
+
+// Tweet actions on the right
+.btd-actions_on_right .js-stream-item .js-tweet-actions {
+	float: right !important;
+	width: auto !important;
+}
+
+.btd-actions_on_hover .js-stream-item .js-tweet-actions {
+	opacity: 0 !important;
+}
+
+.btd-actions_on_hover .js-stream-item:hover .js-tweet-actions {
+	opacity: 1 !important;
+}*/
+
 .btd__small_icns_compose {
   .js-add-image-button, .js-schedule-button, .js-tweet-type-button > button {
     width: auto !important;
