--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -7,6 +7,10 @@
     }
   }
 
+  .app-columns-container {
+    background-color: #151515;
+  }
+
   .attach-compose-buttons .tweet-button {
     background-color: var(--compose-btn-bg-dark-hover);
   }
