--- a/src/css/minimal.css
+++ b/src/css/minimal.css
@@ -1,21 +1,46 @@
+/**
+ * Closer columns
+ */
 .btd__minimal_mode .app-columns {
   padding-top: 0 !important;
   padding-bottom: 0 !important;
   padding-left: 0 !important;
 }
-
 .btd__minimal_mode .column {
   margin-right: 2px !important;
 }
 
+/**
+ * Transparent bg for items in navbar so we can change its bg easily
+ */
+.btd__minimal_mode .column-nav-item,
+.btd__minimal_mode .app-navigator,
+.btd__minimal_mode .app-title {
+  background-color: transparent;
+}
+
+.btd__minimal_mode .app-header {
+  background-color: color(#292F33 saturation(0%));
+}
+
+
+.btd__minimal_mode .dropdown-menu .is-selected {
+  background-color: color(#55acee saturation(0%));
+}
+
+/**
+ * No border betweet tweets + lighter divider between translation and original tweet
+ */
 .btd__minimal_mode :matches(.stream-item, .tweet-detail-reply .stream-item, .compose-header) {
   border-bottom: 0;
 }
-
 .btd__minimal_mode .in-tweet-divider:before {
   background: rgba(0, 0, 0, 0.13);
 }
 
+/**
+ * Nicer modal styles
+ */
 .btd__minimal_mode :matches(.mdl-media-prev, .mdl-media-next) {
   background: transparent;
   z-index: 10;
@@ -36,15 +61,12 @@
     transform: translate(-50%,-50%);
   }
 }
-
 .btd__minimal_mode :matches(.mdl-btn-media, .is-inverted-light .mdl-btn-media) {
   opacity: 1;
 }
-
 .btd__minimal_mode .media-img {
   max-width: 100% !important;
 }
-
 .btd__minimal_mode .med-embeditem {
   min-width: 600px;
   left: 50%;
