:art: better way to style the timestamp

--- a/src/css/theme-dark.css
+++ b/src/css/theme-dark.css
@@ -60,7 +60,7 @@
     color: color(#8899a6 saturation(0%))
   }
 
-  .tweet-timestamp > a {
+  .js-app-columns-container .js-column .tweet-timestamp > a {
     background-color: #222426;
     z-index: 1;
     box-shadow: -4px 0 3px #222426;
