flashing tweets and improved rlt

--- a/src/css/minimal.css
+++ b/src/css/minimal.css
@@ -10,6 +10,24 @@
   margin-right: 2px !important;
 }
 
+@keyframes tweetEnter {
+	from { background-color: rgba(54, 82, 122, 1); }
+	to { background-color: rgba(54, 82, 122, 0); }
+}
+
+.btd__flash_tweets {
+
+	&.btd__flash-mentions :matches(.column-type-interactions, .column-type-mention) .js-chirp-container > article:first-of-type {
+	    animation-duration: 2s;
+	    animation-name: tweetEnter;
+	}
+
+	&.btd__flash-all [class*="column-type"] .js-chirp-container > article:first-of-type {
+	   animation-duration: 2s;
+	   animation-name: tweetEnter;
+	}
+}
+
 /**
  * Transparent bg for items in navbar so we can change its bg easily
  */
