--- a/src/css/index.css
+++ b/src/css/index.css
@@ -49,7 +49,10 @@
 }
 
 .btd__small_icns_compose {
-  .js-add-image-button, .js-schedule-button, .js-tweet-type-button > button {
+  .js-add-image-button,
+  .js-schedule-button,
+  .js-add-emojis,
+  .js-tweet-type-button > button {
     width: auto !important;
     float: left !important;
     margin-right: 4px;
@@ -83,4 +86,8 @@
 
 [data-btdtheme] .js-media-image-link {
   /* Future loading bg image */
+}
+
+.js-add-emojis .btd-emoji-icon {
+  background-image: url('../emojis/emoji-happy.svg');
 }
