--- a/src/css/theme-light.css
+++ b/src/css/theme-light.css
@@ -1,4 +1,4 @@
-
+/*
 [data-btdtheme="light"].btd__minimal_mode {
   .btn-compose {
     background-color: var(--compose-btn-bg-light);
@@ -41,4 +41,4 @@
   .reply-triangle {
     border-color: transparent transparent var(--compose-btn-bg-light-hover) transparent;
   }
-}
+}*/
