--- a/src/css/minimal.css
+++ b/src/css/minimal.css
@@ -118,3 +118,27 @@
     background: transparent;
   }
 }
+
+.btd__minimal_mode .js-stream-item:not(.btd-is-retweet) .tweet-context {
+  .obj-left {
+    margin-top: 60px;
+    margin-right: 0;
+  }
+
+  .icon-small-context {
+    float: left;
+    margin-left: 17px;
+  }
+
+  .icon-reply::before {
+    content: "\f048";
+  }
+
+  .nbfc {
+    display: none;
+  }
+}
+
+.btd__minimal_mode .js-stream-item .activity-header + .txt-mute .tweet-context {
+  display: none;
+}
