--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -24,7 +24,7 @@ body {
 }
 
 .sidebar {
-  width: 170px;
+  width: 190px;
   flex-shrink: 0;
   padding-left: 10px;
   padding-right: 10px;
@@ -33,6 +33,7 @@ body {
 
   display: flex;
   flex-direction: column;
+  overflow: auto;
 }
 
 .sidebar .nav-flex {
@@ -121,6 +122,7 @@ body {
 
   color: #383838;
   overflow: auto;
+  overflow-x: hidden;
 }
 
 .content-block {
@@ -133,16 +135,15 @@ body {
   padding: 20px;
 
   visibility: hidden;
-  transition: all 300ms ease;
-  will-change: transform, opacity;
+  transition: opacity 300ms ease;
+  transform: translate(-100%, -100%);
   opacity: 0;
-  transform: translate(10%, 0);
 }
 
 .content-block.-selected {
   visibility: visible;
-  opacity: 1;
   transform: translate(0, 0);
+  opacity: 1;
 }
 
 
