:art: use zoom-in cursor on thumbnails

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -42,3 +42,7 @@
 .js-add-emojis .btd-emoji-icon {
   background-image: url('../emojis/emoji-happy.svg');
 }
+
+.js-media-image-link {
+  cursor: zoom-in;
+}
