add twitch, streamable, mixcloud, spotify, vidme and favicons in the providers list in the settings

--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -228,6 +228,10 @@ body {
       margin-left: .5em;
     }
 
+    img.favicon-icon {
+      vertical-align: middle;
+    }
+
     label.left-label {
       margin-right: .4em;
       min-width: 50px;
