--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -260,3 +260,44 @@ body {
     }
   }
 }
+
+.tweet-preview {
+  width: 400px;
+  height: 97px;
+  border-radius: 6px;
+  background: pink;
+  position: relative;
+}
+
+.tweet-preview.-name-time {
+  background-image: url('/options/img/name-time-bg.png');
+  font-family: Helvetica, Arial, Verdana, sans-serif;
+  background-repeat: no-repeat;
+  background-color: #1d1f21;
+
+  .username {
+    font-size: 14px;
+    color: white;
+    font-weight: bold;
+    position: absolute;
+
+    top: 30px;
+    left: 69px;
+
+    em {
+      color: #969696;
+      font-style: normal;
+      font-size: 12px;
+      font-weight: normal;
+    }
+  }
+
+  .date {
+    font-size: 12px;
+    color: #969696;
+    position: absolute;
+
+    top: 31px;
+    right: 10px;
+  }
+}
