--- a/src/css/options/index.css
+++ b/src/css/options/index.css
@@ -210,6 +210,10 @@ body {
     color: color(var(--link-color) shade(50%));
   }
 
+  .settings-thumbnails-providers-list {
+    column-count: 2;
+  }
+
   ul, ol {
     list-style: none;
     padding-left: .7em;
