:bug: actually display verified badges for non-RT/non-notifs chirps

--- a/src/css/features/show-verified.css
+++ b/src/css/features/show-verified.css
@@ -9,7 +9,7 @@
     font-style: normal;
     -webkit-font-smoothing: antialiased;
     position: absolute;
-    bottom: 0;
+    bottom: -2px;
     right: 0;
     color: #55acee;
     width: 1em;
