--- a/src/css/index.css
+++ b/src/css/index.css
@@ -10,6 +10,7 @@
 @import './features/gray-notif-icns.css';
 @import './features/hide-context.css';
 @import './features/hide-scrollbars.css';
+@import './features/hide-url-thumb.css';
 @import './features/no-col-icns.css';
 @import './features/no-play-btn.css';
 @import './features/round-pic.css';
