:art: put a white bg behind img in columns and no bg in modals (a la Twitter Web)

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -45,6 +45,14 @@
   display: none;
 }
 
+[data-btdtheme] .js-media-image-link {
+  background-color: white;
+}
+
+[data-btdtheme] .js-modal-panel .js-media-image-link {
+  background-color: transparent;
+}
+
 [data-btdtheme] .js-media-preview-container.is-video a {
   &::after,
   &::before {
