:wrench: add white bg only on pic.twitter images

--- a/src/css/index.css
+++ b/src/css/index.css
@@ -45,7 +45,7 @@
   display: none;
 }
 
-[data-btdtheme] .js-media-image-link {
+[data-btdtheme] .js-media[data-key] .js-media-image-link {
   background-color: white;
 }
 
