:wrench: improve hiding of urls

--- a/src/css/features/hide-url-thumb.css
+++ b/src/css/features/hide-url-thumb.css
@@ -1,3 +1,7 @@
-.btd__hide_url_thumb [data-url-has-preview] {
-  display: none;
+.btd__hide_url_thumb article a.btd-isvishidden {
+  position: absolute !important;
+  width: 1px;
+  height: 1px;
+  overflow: hidden;
+  clip: rect(1px, 1px, 1px, 1px);
 }
