--- a/src/css/features/hide-context.css
+++ b/src/css/features/hide-context.css
@@ -1,3 +1,3 @@
-.btd__hide_context:not(.btd__minimal_mode) .js-stream-item:not(.btd-is-retweet) .tweet-context {
+.btd__hide_context .js-stream-item:not(.btd-is-retweet) .tweet-context {
 	display: none;
 }
