add setting to hide scrollbars or not

--- a/src/css/minimal.css
+++ b/src/css/minimal.css
@@ -94,8 +94,7 @@
   background: color(black a(80%));
 }
 
-.btd__minimal_mode {
-
+.btd__minimal_mode.btd__no_scrollbars {
   .scroll-styled-v::-webkit-scrollbar-track,
   .scroll-styled-h::-webkit-scrollbar-track {
     border-left: 0;
@@ -108,6 +107,9 @@
   .needs-scroll-bottom-offset.scroll-styled-h {
     bottom: 0;
   }
+}
+
+.btd__minimal_mode {
 
   .med-fullpanel {
     box-shadow: none;
